--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
                     Abdur rahman Adil
                 </h2>
                 <p id="paragraph">চলো একসাথে রাতের আকাশের নীচে ঘুরে আসি, চাঁদের আলোয় হাত ধরে সারা রাত কেবল তোমারই কথা বলি।
-                    রাজি থাকলে গুতা মারো বাটনে🥺</p>
+                    রাজি থাকলে গুতা মারো বাটনে🥺 
+                </p>
                 <div class="toogle-btn">
                     <input type="checkbox" name="" id="checkbox-btn">
                 </div>
+                <a href="toogle-btn.html">Check toogle animation</a>
             </div>
         </div>
 
