--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
                 <div class="toogle-btn">
                     <input type="checkbox" name="" id="checkbox-btn">
                 </div>
-                <a href="toogle-btn.html">Check toogle animation</a>
+                <div class="page-link">
+                    <a href="toogle-btn.html">Check toogle animation</a>
+                </div>
             </div>
         </div>
 
